--- a/interactive_app/index.html
+++ b/interactive_app/index.html
@@ -39,6 +39,7 @@
 <script type="text/javascript" src="lyme_disease_us.js"></script>
 <!--Malaria Visualization-->
 <script type="text/javascript" src="malaria_chloropleth_slider.js"></script>
+<div id="lyme"></div>
 </body>
 
 </html>
