--- a/ticks/us_lyme.html
+++ b/ticks/us_lyme.html
@@ -8,8 +8,11 @@
     <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
 </head>
 <body>
+    <h3>Number of Tick-Related Lyme Disease Incidents in the United States per 100,000 Persons</h3>
 <div class="chart-wrapper" id="chart-line1"></div>
 
 <script src="us_lyme.js" charset="utf-8"></script>
+<h4>This chart illustrates the dramatic rise in number of tick-related hospitalizations in the United States from the years 2000-2017.</h4>
+<p></p>
 </body>
 </html>
