--- a/interactive_app/index.html
+++ b/interactive_app/index.html
@@ -17,6 +17,7 @@
 
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="static/css/style2.css">
 </head>
 
 <body>
